--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 :root{
 	--max-width: 1004px;
-	--main-color:blue;
-	--secondary-color:white;
-	--terciary-color:gray;
+	--main-color:rgb(17 24 39);
+	--secondary-color:#2563eb;
+	--terciary-color:rgb(156 163 175);
+	--quaternary-color: #1f2937;
+	--gradiant-white: #374151;
+
+	--max-width: 1110px;
 
 }
 
@@ -10,6 +14,7 @@
 *::after,
 *::before{
 	box-sizing: border-box;
+	font-size: 14px;
 }
 li{
 	list-style: none;
@@ -28,10 +33,10 @@ img{
 
 
 body {
+	margin: 0;
 	font-family: sans-serif;
-	max-width: 1440px;
+
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 1rem;
-	padding-right: 1rem;
+	
 }
