--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 :root{
 	--max-width: 1004px;
-	--main-color:rgb(17 24 39);
+	--main-color:#111827;
 	--secondary-color:#2563eb;
 	--terciary-color:rgb(156 163 175);
 	--quaternary-color: #1f2937;
-	--gradiant-white: #374151;
+	--gradiant-white: #192231;
 
 	--max-width: 1110px;
 
