--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 	--terciary-color:rgb(156 163 175);
 	--quaternary-color: #1f2937;
 	--gradiant-white: #192231;
+	--card-color: #1f2937;
 
 	--max-width: 1110px;
 
@@ -38,5 +39,6 @@ body {
 
 	margin-left: auto;
 	margin-right: auto;
+	background-color: var(--main-color);
 	
 }
